Fix 404 error on page refresh - add SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/api"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
